# Vins-Mono-without-ros

./: CMakeLists.txt  README.md  README_EN.md  install_thirdparty.sh  install_thridparty.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.os.yaml  docker-compose.yaml
DataCollection/: CMakeLists.txt
DataCollection/include/: frame_process.hpp
DataCollection/src/: frame_process.cpp  main.cpp
OrbbecViewer_v1.10.12_202408090905_linux_x64_release/Log/: OrbbecSDK.log.txt
OrbbecViewer_v1.10.12_202408090905_linux_x64_release/config/: config.ini  view.ini
OrbbecViewer_v1.10.12_202408090905_linux_x64_release/output/IMU/: AY8ZA330078_1731925979493_6s_accel__IMU.csv  AY8ZA330078_1731925979493_6s_gyro__IMU.csv
OrbbecViewer_v1.10.12_202408090905_linux_x64_release/output/camera-params/: CameraParam_Orbbec Gemini 2 LAY8ZA330078_Color640x400_Depth640x400.ini
new_config/: 11_18_config.yaml
src/camera_models/chessboard/: Chessboard.cc
test/: run_euroc.cpp
